--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -1,99 +1,9 @@
-- title: Ruby Sponsor
-  slug: ruby
-  companies:
-    - name: Go-jek
-      url: https://www.gojek.io/
-      logo_url: /assets/images/pages/home/sponsors/logo-gojek.svg
-      logo_style: height:64px;
-- title: Platinum Sponsors
-  slug: platinum
-  companies:
-    - name: Nimble
-      url: https://nimblehq.co/
-      logo_url: /assets/images/pages/home/sponsors/logo-nimble.svg
-      is_partner: true
-      partner_text: Official Partner
-      logo_style: height:64px;
-    - name: Omise
-      url: https://www.omise.co/
-      logo_url: /assets/images/pages/home/sponsors/logo-omise.svg
-      logo_style: height:64px;
-- title: Gold Sponsors
-  slug: gold
-  companies:
-    - name: Gitlab
-      url: https://about.gitlab.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-gitlab.svg
-      logo_style: height:52px; margin-bottom:5px;
-      is_partner: true
-      partner_text: Swag Sponsor
-    - name: Matestack
-      url: https://www.matestack.org/
-      logo_url: /assets/images/pages/home/sponsors/logo-matestack.svg
-      logo_style: height:37px;
-    - name: Nexmo
-      url: https://developer.nexmo.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-nexmo.svg
-      logo_style: height:57px;
-    - name: Rapid River Software
-      url: https://rrsoft.co/
-      logo_url: /assets/images/pages/home/sponsors/logo-rapid-river.svg
-      logo_style: height:38px;
-    - name: Jetbrains
-      url: https://www.jetbrains.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-jetbrains.svg
-      logo_style: height:90px;
-- title: Speakers Sponsors & Individuals
-  slug: speaker
-  companies:
-    - name: Ascenda Loyalty
-      url: https://www.ascendaloyalty.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-ascenda.jpg
-    - name: Blackmill
-      url: https://blackmill.co/
-      logo_url: /assets/images/pages/home/sponsors/logo-blackmill.jpg
-    - name: Brightwire
-      url: https://www.brightwire.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-brightwire.jpg
-    - name: IEX
-      url: https://iextrading.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-iex.jpg
-    - name: Josh
-      url: https://www.joshsoftware.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-josh.jpg
-    - name: Saeloun
-      url: https://www.saeloun.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-saeloun.jpg
-    - name: Speee
-      url: https://speee.jp/
-      logo_url: /assets/images/pages/home/sponsors/logo-speee.jpg
-    - name: TTY Toolkit
-      url: https://ttytoolkit.org/
-      logo_url: /assets/images/pages/home/sponsors/logo-tty-toolkit.jpg
-    - name: Twilio
-      url: https://www.twilio.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-twilio.jpg
-    - name: Zero One
-      url: https://www.zero-one.io/
-      logo_url: /assets/images/pages/home/sponsors/logo-zero-one.jpg
-- title: Partners
-  slug: partner
-  companies:
-    - name: Eventpop
-      url: https://www.eventpop.me/
-      logo_url: /assets/images/pages/home/sponsors/logo-eventpop.jpg
-    - name: Gummy Bear Recruitment
-      url: https://www.gummybear.tech/
-      logo_url: /assets/images/pages/home/sponsors/logo-gummy-bear.jpg
-    - name: Lemi
-      url: https://app.lemi.travel/
-      logo_url: /assets/images/pages/home/sponsors/logo-lemi.jpg
-    - name: Notion
-      url: https://www.notion.so/
-      logo_url: /assets/images/pages/home/sponsors/logo-notion.jpg
-    - name: Pigeonhole
-      url: https://pigeonholelive.com/
-      logo_url: /assets/images/pages/home/sponsors/logo-pigeonhole.jpg
-      logo_style: margin-bottom:10px;
-      is_partner: true
-      partner_text: Live Audience Engagement
+# Uncomment to add the sponsors
+#
+#- title: Level Name
+#  slug: level-name
+#  companies:
+#    - name: Sponsor Name
+#      url: https://www.sponsor.com/
+#      logo_url: /assets/images/pages/home/sponsors/sponsor.svg
+#      logo_style: height:64px;
