Add 2020 announcement content (#141)
* Remobe 2019 website files and content

* Remove unusued NPM dependencies

* Add form and links to social platform to the homepage

* Add footer with legal mention and link to past conference

* Decrease font size of the email input for the mailing list form on smaller screens

* Remove JS vendor files as the page is actually JS-free

* Remove ESLint plugin for Vue as the latter has been removed as a dependency

* ESLintignore the root directory storing the archived past websites

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 {
   "env": {
-    "browser": 1
+    "browser": true
   },
   "extends": [
-    "@nimbl3/eslint-config-nimbl3",
-    "plugin:vue/recommended"
+    "@nimbl3/eslint-config-nimbl3"
   ],
   "rules": {
     "no-new": "off"
