--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rubyconfth",
-  "version": "1.0.0",
-  "description": "Website for the Ruby Conference Thailand",
+  "version": "2.0.0",
+  "description": "Website for RubyConf TH",
   "scripts": {
     "start": "BUILD_ENV=development webpack -w --config ./config/webpack/config.dev.js",
     "build": "BUILD_ENV=production webpack --config ./config/webpack/config.prod.js",
@@ -15,9 +15,9 @@
   "author": "bangkok.rb",
   "private": true,
   "bugs": {
-    "url": "hhttps://github.com/bangkokrb/rubyconfth/issues"
+    "url": "https://github.com/bangkokrb/rubyconfth/issues"
   },
-  "homepage": "hhttps://github.com/bangkokrb/rubyconfth#readme",
+  "homepage": "https://github.com/bangkokrb/rubyconfth#readme",
   "devDependencies": {
     "@nimbl3/eslint-config-nimbl3": "2.1.1",
     "@babel/cli": "7.5.0",
@@ -26,18 +26,12 @@
     "@babel/preset-env": "7.5.4",
     "babel-loader": "8.0.6",
     "eslint": "6.3.0",
-    "eslint-plugin-vue": "5.2.3",
     "svg-spritemap-webpack-plugin": "3.3.0",
-    "vue-loader": "15.7.0",
-    "vue-template-compiler": "2.6.10",
     "webpack": "4.31.0",
     "webpack-cli": "3.3.2",
     "webpack-shell-plugin": "0.5.0"
   },
   "dependencies": {
-    "body-scroll-lock": "2.6.1",
-    "bootstrap.native": "2.0.26",
-    "smoothscroll-polyfill": "0.4.4",
-    "vue": "2.6.10"
+    "bootstrap.native": "2.0.26"
   }
 }
