--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "_site/"
-  command = "JEKYLL_ENV=production ./bin/build"
+  command = "git submodule update --init --recursive && JEKYLL_ENV=production ./bin/build"
