--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "esbuild": "node esbuild.config.js --minify",
-    "esbuild-dev": "node esbuild.config.js --watch"
+    "esbuild-dev": "node esbuild.config.js --watch",
+    "svg:generate-sprite": "svg-sprite --shape-id-generator \"icon-%s\" --symbol --symbol-dest src/_components/ --symbol-sprite icon_sprite.liquid src/images/shared/icons/*.svg"
   },
   "devDependencies": {
     "esbuild": "0.14.39",
@@ -15,7 +16,8 @@
     "postcss-load-config": "3.1.4",
     "postcss-preset-env": "7.4.3",
     "sass": "1.50.1",
-    "sass-loader": "12.6.0"
+    "sass-loader": "12.6.0",
+    "svg-sprite": "1.5.4"
   },
   "dependencies": {
     "bootstrap": "5.2.1"
