--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -10,6 +10,10 @@
   about: "Application Health Monitoring built for Developers. Everything you need to keep production happy so that you can keep shipping. Deploy with confidence and be your team's DevOps hero."
   logo_url: /images/sponsors/honeybadger.png
   url: "https://www.honeybadger.io/"
+- name: Oivan
+  about: "We have local teams in 7 cities in 5 countries. With our proprietary Enhanced Distributed Teams model, our clients benefit from close onsite collaboration and the scale of our internationally distributed team."
+  logo_url: /images/sponsors/oivan.png
+  url: "hhttps://oivan.com/"
 - name: Saeloun
   about: "We are a team of developers which specialises in building web and mobile applications. We have a track record of success in delivering results that meet and exceed our clients' expectations."
   logo_url: /images/sponsors/saeloun.svg
