Fix typo in company url

--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -13,7 +13,7 @@
 - name: Oivan
   about: "We have local teams in 7 cities in 5 countries. With our proprietary Enhanced Distributed Teams model, our clients benefit from close onsite collaboration and the scale of our internationally distributed team."
   logo_url: /images/sponsors/oivan.png
-  url: "hhttps://oivan.com/"
+  url: "https://oivan.com/"
 - name: Saeloun
   about: "We are a team of developers which specialises in building web and mobile applications. We have a track record of success in delivering results that meet and exceed our clients' expectations."
   logo_url: /images/sponsors/saeloun.svg
