--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -1,5 +1,5 @@
 - name: AppSignal
-  about: "APM for Ruby, Elixir & Node.js. No-brainer monitoring for smart developers."
+  about: "Monitor your apps from A to Z: error tracking, performance insights, server metrics, uptime pages, custom dashboards, and more. AppSignal works for all popular Ruby frameworks and automatically instruments and creates beautiful dashboards for Sidekiq, Active Job, and other integrations."
   logo_url: /images/sponsors/appsignal.svg
   url: "https://www.appsignal.com/"
 - name: Eventpop
@@ -11,7 +11,7 @@
   logo_url: /images/sponsors/honeybadger.png
   url: "https://www.honeybadger.io/"
 - name: Oivan
-  about: "We have local teams in 7 cities in 5 countries. With our proprietary Enhanced Distributed Teams model, our clients benefit from close onsite collaboration and the scale of our internationally distributed team."
+  about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges "
   logo_url: /images/sponsors/oivan.png
   url: "https://oivan.com/"
 - name: Saeloun
