style tweaks for 4 instead of 5 sponsors

--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -7,7 +7,7 @@
   logo_url: /images/sponsors/eventpop.png
   url: "https://www.eventpop.me/"
 - name: Honeybadger
-  about: "Application Health Monitoring built for Developers. Everything you need to keep production happy so that you can keep shipping. Deploy with confidence and be your team's DevOps hero."
+  about: "Honeybadger is the error, uptime, and cron monitoring tool built for you, the developer who cares about a quality product and happy customers."
   logo_url: /images/sponsors/honeybadger.svg
   url: "https://www.honeybadger.io/"
 - name: Oivan
