reduce oivan logo width slightly so size matches

--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -14,3 +14,4 @@
   about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges "
   logo_url: /images/sponsors/oivan.svg
   url: "https://oivan.com/"
+  logo_style: "max-width: 88%;"
