--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -7,14 +7,10 @@
   logo_url: /images/sponsors/eventpop.png
   url: "https://www.eventpop.me/"
 - name: Honeybadger
-  about: "Application Health Monitoring built for Developers. Everything you need to keep production happy so that you can keep shipping. Deploy with confidence and be your team's DevOps hero."
-  logo_url: /images/sponsors/honeybadger.png
+  about: "Honeybadger is the error, uptime, and cron monitoring tool built for you, the developer who cares about a quality product and happy customers."
+  logo_url: /images/sponsors/honeybadger.svg
   url: "https://www.honeybadger.io/"
 - name: Oivan
   about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges "
-  logo_url: /images/sponsors/oivan.png
+  logo_url: /images/sponsors/oivan.svg
   url: "https://oivan.com/"
-- name: Saeloun
-  about: "We are a team of developers which specialises in building web and mobile applications. We have a track record of success in delivering results that meet and exceed our clients' expectations."
-  logo_url: /images/sponsors/saeloun.svg
-  url: "https://www.saeloun.com/"
