--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "svg-sprite": "2.0.0-beta7"
   },
   "dependencies": {
-    "bootstrap": "5.2.1"
+    "bootstrap": "5.2.1",
+    "stimulus": "3.1.0"
   }
 }
