--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "svg:generate-sprite": "svg-sprite --shape-id-generator \"icon-%s\" --symbol --symbol-dest src/_components/ --symbol-sprite icon_sprite.liquid src/images/shared/icons/*.svg"
   },
   "devDependencies": {
+    "css-has-pseudo": "4.0.1",
     "esbuild": "0.14.39",
     "glob": "8.0.1",
     "postcss": "8.4.12",
@@ -20,6 +21,7 @@
     "svg-sprite": "2.0.0-beta7"
   },
   "dependencies": {
-    "bootstrap": "5.2.1"
+    "bootstrap": "5.2.1",
+    "stimulus": "3.1.0"
   }
 }
