Implement variant to list sponsors with detailed information

--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -14,7 +14,7 @@
   url: "https://www.honeybadger.io/"
   level: gold
 - name: Oivan
-  about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges "
+  about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges."
   logo_url: /images/sponsors/oivan.svg
   url: "https://oivan.com/"
   level: gold
