--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -5,6 +5,13 @@
   type: keynote
   bio: |
     Nate runs Speedshop, a software performance company specializing in Ruby, and is also the maintainer of Puma, the popular Ruby webserver.
+- first_name: Noah
+  last_name: Gibbs
+  twitter_handle: codefolio
+  photo_url: /images/speakers/noah-gibbs.png
+  type: keynote
+  bio: |
+    Noah is an Engineer at Shopify. He teaches practical coding at http://rebuilding-rails.com and http://codefol.io.
 - first_name: Siddarth
   last_name: Sharma
   twitter_handle: _svs_
