--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -11,7 +11,7 @@
   photo_url: /images/speakers/noah-gibbs.png
   type: keynote
   bio: |
-    Noah is an Engineer at Shopify. He teaches practical coding at http://rebuilding-rails.com and http://codefol.io.
+    Noah is an Engineer at Shopify. He wrote the ebook Rebuilding Rails and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe
 - first_name: Siddarth
   last_name: Sharma
   twitter_handle: _svs_
@@ -19,3 +19,12 @@
   type: keynote
   bio: |
     Siddarth is the CTO of InVideo. He has been a Ruby developer for fifteen years and has also been an investment banker and musician.
+- first_name: Yarden
+  last_name: Laifenfeld
+  twitter_handle: YardenLaif
+  photo_url: /images/speakers/yarden-laifenfeld.png
+  type: keynote
+  bio: |
+    Yarden is a Software Engineer at Rookout. With a deep background in C and embedded Linux environments, you can find her in the office jumping between 6 different programming languages a day. When she's not busy developing new features and helping out clients, she loves learning about new technology, creating iOS apps and making everything she can automated.
+
+
