--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -11,7 +11,7 @@
   photo_url: /images/speakers/noah-gibbs.png
   type: keynote
   bio: |
-    Noah is an Engineer at Shopify. He wrote the ebook Rebuilding Rails and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe
+    Noah is an Engineer at Shopify. He wrote the ebook Rebuilding Rails and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe.
 - first_name: Siddarth
   last_name: Sharma
   twitter_handle: _svs_
