minor text and grammar tweaks, fix Siddharth

--- a/src/_data/site_metadata.yml
+++ b/src/_data/site_metadata.yml
@@ -6,5 +6,5 @@
 
 title: RubyConf TH 2022
 description: >-
-  Stay tuned for RubyConf TH 2022
+  A community-powered Ruby conference on 9-10 December 2022 in Bangkok, Thailand
 image: /public/images/social/opengraph.png
