--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -11,14 +11,14 @@
   photo_url: /images/speakers/noah-gibbs.png
   type: keynote
   bio: |
-    Noah is an Engineer at Shopify. He wrote the ebook Rebuilding Rails and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe.
-- first_name: Siddarth
+    Noah is an Engineer at Shopify. He wrote the ebook 'Rebuilding Rails' and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe.
+- first_name: Siddharth
   last_name: Sharma
   twitter_handle: _svs_
-  photo_url: /images/speakers/siddarth-sharma.png
+  photo_url: /images/speakers/siddharth-sharma.png
   type: keynote
   bio: |
-    Siddarth is the CTO of InVideo. He has been a Ruby developer for fifteen years and has also been an investment banker and musician.
+    Siddharth is the CTO of InVideo. He has been a Ruby developer for fifteen years and has also been an investment banker and musician.
 - first_name: Yarden
   last_name: Laifenfeld
   twitter_handle: YardenLaif
