add fathom analytics code

--- a/src/_data/site_metadata.yml
+++ b/src/_data/site_metadata.yml
@@ -8,3 +8,4 @@ title: RubyConf TH 2022
 description: >-
   A community-powered Ruby conference on 9-10 December 2022 in Bangkok, Thailand
 image: /public/images/social/opengraph.png
+fathom_analytics: FOCVQRVQ
