--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -23,3 +23,8 @@
   logo_url: /images/sponsors/oivan.svg
   url: "https://oivan.com/"
   level: gold
+- name: PRODIGY9
+  about: "Better people, better software."
+  url: https://www.cloud66.com/frameworks/rails/?utm_source=e&utm_medium=l&utm_campaign=RubyConfTH
+  logo_url: /images/sponsors/prodigy9.svg
+  level: silver
