--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -24,7 +24,7 @@
   url: "https://oivan.com/"
   level: gold
 - name: PRODIGY9
-  about: "Better people, better software."
+  about: "Tired of condescending tech elites? Recruiters giving up on your company? Empathy and Humility is part of our core hiring practices. It's how we've scaled to FIFTY with no funding in just one year. We provide software development, outsourcing, recruitment, team structuring and everything People for your Software Team. Get in touch. We don't bite (or judge :p)."
   url: https://www.cloud66.com/frameworks/rails/?utm_source=e&utm_medium=l&utm_campaign=RubyConfTH
   logo_url: /images/sponsors/prodigy9.svg
   level: silver
