--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -18,6 +18,11 @@
   logo_url: /images/sponsors/honeybadger.svg
   url: "https://www.honeybadger.io/"
   level: gold
+- name: MyCloudFulfillment
+  about: "We are the #1 fulfillment solution in Thailand for E-Commerce and multi-channel businesses. Our Order Management System and Warehouse Center are designed for SEA markets with full connectivity to Marketplaces, Websites, Social commerces, and beyond."
+  url: https://careers.mycloudfulfillment.com/software-developers.html
+  logo_url: /images/sponsors/mycloudfulfillment.svg
+  level: silver
 - name: Oivan
   about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges."
   logo_url: /images/sponsors/oivan.svg
@@ -27,4 +32,9 @@
   about: "Tired of condescending tech elites? Recruiters giving up on your company? Empathy and Humility is part of our core hiring practices. It's how we've scaled to FIFTY with no funding in just one year. We provide software development, outsourcing, recruitment, team structuring and everything People for your Software Team. Get in touch. We don't bite (or judge :p)."
   url: https://www.cloud66.com/frameworks/rails/?utm_source=e&utm_medium=l&utm_campaign=RubyConfTH
   logo_url: /images/sponsors/prodigy9.svg
+  level: silver
+- name: Talented
+  about: "Talented helps small businesses in Hong Kong with just about anything you can name. We cover bases like recruitment, social media, web design, and small business financing so you get a breather from managing your own business."
+  url: https://talentedhk.com/
+  logo_url: /images/sponsors/talented.svg
   level: silver
