--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -34,7 +34,7 @@
   logo_url: /images/sponsors/prodigy9.svg
   level: silver
 - name: Talented
-  about: "Talented helps small businesses in Hong Kong with just about anything you can name. We cover bases like recruitment, social media, web design, and small business financing so you get a breather from managing your own business."
+  about: "Talented helps small businesses with just about anything you can name. We cover bases like recruitment, social media, web design, and small business financing so you get a breather from managing your own business."
   url: https://talentedhk.com/
   logo_url: /images/sponsors/talented.svg
   level: silver
