--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -4,7 +4,7 @@
   url: "https://www.appsignal.com/"
   level: silver
 - name: Bee SCM
-  about: "Enterprise-grade Hospitality Procurement & Inventory management software that is intuitive, connected, simple to use and helps your team focus on the bottom line."
+  about: "Bee SCM is an enterprise-grade Hospitality Procurement & Inventory management software powered by JRuby that is intuitive, connected, simple to use and helps your team focus on the bottom line."
   logo_url: /images/sponsors/beeees.png
   url: "https://beescm.com/"
   level: silver
