add basic practicalities page

--- a/src/_data/menu/header.yml
+++ b/src/_data/menu/header.yml
@@ -1,5 +1,7 @@
 - title: Venue
   permalink: /venue
+- title: Practicalities
+  permalink: /practicalities
 - title: Schedule
   permalink: /schedule
 - title: Sponsors
