--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -3,6 +3,11 @@
   logo_url: /images/sponsors/appsignal.svg
   url: "https://www.appsignal.com/"
   level: silver
+- name: Bee SCM
+  about: "Bee SCM is an enterprise-grade Hospitality Procurement & Inventory management software powered by JRuby that is intuitive, connected, simple to use and helps your team focus on the bottom line."
+  logo_url: /images/sponsors/beeees.png
+  url: "https://beescm.com/"
+  level: silver
 - name: Cloud 66
   about: "Cloud 66 is the best deployment tool for Rails. Deploy your Rails and Rack applications directly from your repo to any cloud, with native support for Rails conventions, full databases support, replication and backups, powerful access management, and traffic control features. Try it today for free with an extra $200 in free credits with the code: RubyConfTH."
   url: https://www.cloud66.com/frameworks/rails/?utm_source=e&utm_medium=l&utm_campaign=RubyConfTH
@@ -18,6 +23,11 @@
   logo_url: /images/sponsors/honeybadger.svg
   url: "https://www.honeybadger.io/"
   level: gold
+- name: MyCloudFulfillment
+  about: "We are the #1 fulfillment solution in Thailand for E-Commerce and multi-channel businesses. Our Order Management System and Warehouse Center are designed for SEA markets with full connectivity to Marketplaces, Websites, Social commerces, and beyond."
+  url: https://careers.mycloudfulfillment.com/software-developers.html
+  logo_url: /images/sponsors/mycloudfulfillment.svg
+  level: silver
 - name: Oivan
   about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges."
   logo_url: /images/sponsors/oivan.svg
@@ -27,4 +37,9 @@
   about: "Tired of condescending tech elites? Recruiters giving up on your company? Empathy and Humility is part of our core hiring practices. It's how we've scaled to FIFTY with no funding in just one year. We provide software development, outsourcing, recruitment, team structuring and everything People for your Software Team. Get in touch. We don't bite (or judge :p)."
   url: https://www.cloud66.com/frameworks/rails/?utm_source=e&utm_medium=l&utm_campaign=RubyConfTH
   logo_url: /images/sponsors/prodigy9.svg
+  level: silver
+- name: Talented
+  about: "Talented helps small businesses with just about anything you can name. We cover bases like recruitment, social media, web design, and small business financing so you get a breather from managing your own business."
+  url: https://talentedhk.com/
+  logo_url: /images/sponsors/talented.svg
   level: silver
