--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -21,7 +21,7 @@
   photo_url: /images/speakers/jeremy-evans.jpg
 - id: jonatas-davi
   first_name: Jônatas
-  last_name: Davi
+  last_name: Davi Paganini
   twitter_handle: jonatasdp
 - id: michael-milewski
   first_name: Michael
@@ -73,7 +73,7 @@
 - id: thatthep-vorrasing
   first_name: Thatthep "Audy"
   last_name: Vorrasing
-  twitter_handle: audyningrum27
+  twitter_handle: amaudy
 - id: tim-riley
   first_name: Tim
   last_name: Riley
