--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -6,7 +6,7 @@
   title: "Welcome Address"
 - start_at: "9:10"
   end_at: "9:55"
-  title: "A Beginner's Guide to Puma Internals"
+  title: "Keynote: A Beginner's Guide to Puma Internals"
   speaker_id: nate-berkopec
 - start_at: "10:00"
   end_at: "10:30"
@@ -14,7 +14,7 @@
   speaker_id: cristian-planas
 - start_at: "10:30"
   end_at: "10:50"
-  title: "Tea Break"
+  title: "Coffee Break"
 - start_at: "10:50"
   end_at: "11:20"
   title: "Hanami 2: New Framework, New You"
@@ -42,14 +42,14 @@
     - selena-small
 - start_at: "15:05"
   end_at: "15:35"
-  title: "Tea Break"
+  title: "Coffee Break"
 - start_at: "15:35"
   end_at: "16:05"
   title: "Why I choose Phoenix"
   speaker_id: aaron-cruz
 - start_at: "16:10"
   end_at: "16:55"
-  title: "The Ecstatic Organisation"
+  title: "Keynote: The Ecstatic Organisation"
   speaker_id: siddarth-sharma
 - start_at: "17:00"
   end_at: "17:10"
