add some more pics from twitter; rename siddharth

--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -50,7 +50,7 @@
 - start_at: "16:10"
   end_at: "16:55"
   title: "Keynote: The Ecstatic Organisation"
-  speaker_id: siddarth-sharma
+  speaker_id: siddharth-sharma
 - start_at: "17:00"
   end_at: "17:10"
   title: "Closing remarks & announcements"
