--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -14,6 +14,7 @@
   first_name: Cristian
   last_name: Planas
   twitter_handle: crplanas
+  photo_url: /images/speakers/cristian-planas.jpg
 - id: jeremy-evans
   first_name: Jeremy
   last_name: Evans
@@ -23,10 +24,12 @@
   first_name: Jônatas
   last_name: Davi Paganini
   twitter_handle: jonatasdp
+  photo_url: /images/speakers/jonatas-davi.jpg
 - id: michael-milewski
   first_name: Michael
   last_name: Milewski
   twitter_handle: saramic
+  photo_url: /images/speakers/michael-milewski.jpg
 - id: nate-berkopec
   first_name: Nate
   last_name: Berkopec
@@ -47,9 +50,11 @@
   first_name: Paolo "Nusco"
   last_name: Perrotta
   twitter_handle: nusco
+  photo_url: /images/speakers/paolo-perrotta.jpg
 - id: rtdp
   first_name: rtdp
   twitter_handle: rtdp
+  photo_url: /images/speakers/rtdp.jpg
 - id: rodrigo-urubatan
   first_name: Rodrigo
   last_name: Urubatan Ferreira Jardim
@@ -58,7 +63,7 @@
   first_name: Selena
   last_name: Small
   twitter_handle: selenasmall88
-- id: siddarth-sharma
+- id: siddharth-sharma
   first_name: Siddharth
   last_name: Sharma
   twitter_handle: _svs_
@@ -70,10 +75,12 @@
   first_name: Stephan
   last_name: Eberle
   twitter_handle: stephaneberle
+  photo_url: /images/speakers/stephan-eberle.jpg
 - id: thatthep-vorrasing
   first_name: Thatthep "Audy"
   last_name: Vorrasing
   twitter_handle: amaudy
+  photo_url: /images/speakers/thatthep-vorrasing.jpg
 - id: tim-riley
   first_name: Tim
   last_name: Riley
@@ -91,3 +98,4 @@
   first_name: Yuji
   last_name: Yokoo
   twitter_handle: yujiyokoo
+  photo_url: /images/speakers/yuji-yokoo.jpg
