--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -61,6 +61,7 @@
   first_name: Rodrigo
   last_name: Urubatan Ferreira Jardim
   twitter_handle: urubatan
+  photo_url: /images/speakers/rodrigo-urubatan.jpg
 - id: selena-small
   first_name: Selena
   last_name: Small
