--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -1,29 +1,105 @@
-- first_name: Nate
+- id: aaron-cruz
+  first_name: Aaron
+  last_name: Cruz
+  twitter_handle: mraaroncruz
+  photo_url: /images/speakers/aaron-cruz.jpg
+- id: anita-jaszewska
+  first_name: Anita
+  last_name: Jaszewska
+  photo_url: /images/speakers/anita-jaszewska.jpg
+- id: charles-nutter
+  first_name: Charles
+  last_name: Nutter
+  twitter_handle: headius
+  photo_url: /images/speakers/charles-nutter.jpg
+- id: cristian-planas
+  first_name: Cristian
+  last_name: Planas
+  twitter_handle: crplanas
+  photo_url: /images/speakers/cristian-planas.jpg
+- id: jeremy-evans
+  first_name: Jeremy
+  last_name: Evans
+  twitter_handle: jeremyevans0
+  photo_url: /images/speakers/jeremy-evans.jpg
+- id: jonatas-davi
+  first_name: Jônatas
+  last_name: Davi Paganini
+  twitter_handle: jonatasdp
+  photo_url: /images/speakers/jonatas-davi.jpg
+- id: michael-milewski
+  first_name: Michael
+  last_name: Milewski
+  twitter_handle: saramic
+  photo_url: /images/speakers/michael-milewski.jpg
+- id: nate-berkopec
+  first_name: Nate
   last_name: Berkopec
   twitter_handle: nateberkopec
   photo_url: /images/speakers/nate-berkopec.jpg
   type: keynote
   bio: |
     Nate runs Speedshop, a software performance company specializing in Ruby, and is also the maintainer of Puma, the popular Ruby webserver.
-- first_name: Noah
+- id: noah-gibbs
+  first_name: Noah
   last_name: Gibbs
   twitter_handle: codefolio
   photo_url: /images/speakers/noah-gibbs.jpg
   type: keynote
   bio: |
     Noah is an Engineer at Shopify. He wrote the ebook 'Rebuilding Rails' and then a lot about how fast Ruby is at various tasks. Despite being a grumpy old programmer in Inverness, Scotland, Noah believes that some day, somehow, there will be a second game as good as Stuart Smith's Adventure Construction Set for the Apple IIe.
-- first_name: Siddharth
+- id: paolo-perrotta
+  first_name: Paolo "Nusco"
+  last_name: Perrotta
+  twitter_handle: nusco
+  photo_url: /images/speakers/paolo-perrotta.jpg
+- id: rtdp
+  first_name: rtdp
+  twitter_handle: rtdp
+  photo_url: /images/speakers/rtdp.jpg
+- id: rodrigo-urubatan
+  first_name: Rodrigo
+  last_name: Urubatan Ferreira Jardim
+  twitter_handle: urubatan
+  photo_url: /images/speakers/rodrigo-urubatan.jpg
+- id: selena-small
+  first_name: Selena
+  last_name: Small
+  twitter_handle: selenasmall88
+  photo_url: /images/speakers/selena-small.jpg
+- id: siddharth-sharma
+  first_name: Siddharth
   last_name: Sharma
   twitter_handle: _svs_
   photo_url: /images/speakers/siddharth-sharma.jpg
   type: keynote
   bio: |
     Siddharth is the CTO of InVideo. He has been a Ruby developer for fifteen years and has also been an investment banker and musician.
-- first_name: Yarden
+- id: stephan-eberle
+  first_name: Stephan
+  last_name: Eberle
+  twitter_handle: stephaneberle
+  photo_url: /images/speakers/stephan-eberle.jpg
+- id: thatthep-vorrasing
+  first_name: Thatthep "Audy"
+  last_name: Vorrasing
+  twitter_handle: amaudy
+  photo_url: /images/speakers/thatthep-vorrasing.jpg
+- id: tim-riley
+  first_name: Tim
+  last_name: Riley
+  twitter_handle: timriley
+  photo_url: /images/speakers/tim-riley.jpg
+- id: yarden-laifenfeld
+  first_name: Yarden
   last_name: Laifenfeld
   twitter_handle: YardenLaif
   photo_url: /images/speakers/yarden-laifenfeld.jpg
   type: keynote
   bio: |
     Yarden is a Software Engineer at Rookout. With a deep background in C and embedded Linux environments, you can find her in the office jumping between 6 different programming languages a day. When she's not busy developing new features and helping out clients, she loves learning about new technology, creating iOS apps and making everything she can automated.
-    
+- id: yuji-yokoo
+  first_name: Yuji
+  last_name: Yokoo
+  twitter_handle: yujiyokoo
+  photo_url: /images/speakers/yuji-yokoo.jpg
